# old_stars

./: .gitignore  404.html  README.MD  TODO.MD  asset-manifest.json  docker-compose.local.only-db.yml  docker-compose.local.yml  docker-compose.yml  docker-compose.yml.local  index.html  index.txt  manifest.json
.github/workflows/: build-and-deploy-backend.yml  docker-publish.yml
backend/: .env  Cargo.toml  Dockerfile  README.MD  wait_for_it.sh
backend/.github/workflows/: build-and-deploy.yml
backend/migrations/2021-05-30-201740_test_table/: up.sql
backend/migrations/2021-06-06-194900_user/: down.sql  up.sql
backend/migrations/2021-06-09-184818_sessions/: down.sql  up.sql
backend/migrations/2021-06-18-184830_old_users/: down.sql  up.sql
backend/migrations/2021-07-11-192636_drop_salt_column/: up.sql
backend/migrations/2024-08-10-114804_roles/: up.sql
backend/migrations/2024-08-18-154745_history/: down.sql  up.sql
backend/migrations/2025-08-06-135630_histories/: up.sql
backend/migrations/2025-08-06-135630_histories-no-fk/: up.sql
backend/migrations/2025-08-12-211050_old_users/: up.sql
backend/migrations/2025-08-12-211106_sessions/: up.sql
backend/migrations/2025-08-12-211111_histories/: up.sql
backend/src/: db.rs  lib.rs  main.rs  model.rs  schema.rs  session.rs
backend/src/config/: configurator.rs
backend/src/db/: auth_service.rs  configurator.rs  connection.rs  user_service.rs
backend/src/model/: app_user.rs  history.rs  login_data.rs  mod.rs  role.rs  session.rs  user.rs
backend/src/repository/: connection.rs
backend/src/service/: auth_service.rs  consumption_service.rs  drink_service.rs  error.rs  history_service.rs  mod.rs  token_service.rs  user_service.rs
backend/tests/: auth-service-test.rs  consumption-service-test.rs  drink-service-test.rs  env-test.rs  history-service-test.rs  user-service-test.rs
backend/tests/mocks/: history_service.rs  mod.rs  user_service.rs
frontend/: .gitignore  TODO.md  asset-manifest.json  index.html  jest.config.ts  manifest.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: DrinkUtil.test.tsx
frontend/app/: App.module.css  App.tsx  Constants.tsx  global.css  layout.tsx  manifest.json  sw.js
frontend/public/: index.html
frontend/src/: App.css  App.module.css  App.tsx  Constants.tsx  global.css  vars.css
provision_old_stars_vps/: Dockerfile  README.MD  cleanup.sh  create_user.sh  install_certbot.sh  install_certificate.sh  install_docker.sh  provision-old-star-vps.sh
(+254 files in other folders)
