[package]
name = "backend"
version = "0.1.0"
authors = ["nilSinger <niilz@outlook.de>"]
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
rocket_sync_db_pools = {version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
rand_core = {version = "0.6", features = ["std"] }
argon2 = "0.2"

[[bin]]
name = "backend"
path = "./src/main.rs"

[[bin]]
name = "configurator"
path = "./src/db/configurator.rs"

