[package]
name = "backend"
version = "0.1.0"
authors = ["nilSinger <niilz@outlook.de>"]
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
diesel = { version = "2.2.2", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.205", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.3"
uuid = { version = "1.10.0", features = ["v4"] }
clap = { version = "4.5.15", features = ["derive"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]

[[bin]]
name = "backend"
path = "./src/main.rs"

[[bin]]
name = "configurator"
path = "./src/config/configurator.rs"

