[package]
name = "backend"
version = "0.1.0"
authors = ["nilSinger <niilz@outlook.de>"]
edition = "2024"
default-run = "old_stars_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
diesel = { version = "2.2.12", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
argon2 = "0.5.3"
uuid = { version = "1.17.0", features = ["v4"] }
clap = { version = "4.5.42", features = ["derive"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]

[[bin]]
name = "old_stars_api"
path = "./src/main.rs"

[[bin]]
name = "configurator"
path = "./src/config/configurator.rs"

